# AdventOfCode

./: README.md  pyproject.toml
Java/AdventOfCode/: .gitignore  build.gradle
Java/AdventOfCode/src/aoc.TwentyTwentyFour/Day01/: Day01.java
Java/AdventOfCode/src/test/aoc/TwentyTwentyFour/Day01/: Day01Test.java
Python/: pyproject.toml
Python/day-1/: solve.py  test.py
Python/day-2/: solver.py
Python/day-3/: solver.py  test.py
day-1/: solve.py  test.py
day-2/: solver.py  test.py
day-3/: solver.py  test.py
